# TeamB_mrsd_24

./: .gitignore  CONTRIBUTION_SUMMARY.md  FVD.sh  README.md  configure_remote_network.sh  test_hardware_acceleration.py  test_human_data_subscriber.py  test_snap_comparison.py
airstack/: run_mavlink_proxy.sh
airstack/docker/: run_unified.sh
airstack/ros_ws/src/PayloadSdk/: cmake_install.cmake
airstack/ros_ws/src/behavior_tree_system/behavior_executive/: CMakeLists.txt  package.xml
airstack/ros_ws/src/behavior_tree_system/behavior_executive/include/behavior_executive/: behavior_executive.hpp  behavior_logger.hpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/include/behavior_executive/action_handlers/: action_handler_interface.hpp  geofence_mapping_handler.hpp  go_to_target_with_avoidance_handler.hpp  navigate_to_waypoint_handler.hpp  search_handler.hpp  survey_handler.hpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/include/behavior_executive/mission_planning/: gps_meter_converter.hpp  path_planning.hpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/src/: behavior_executive.cpp  behavior_logger.cpp  mavros_adapter.cpp  transition_logger.cpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/src/action_handlers/: geofence_mapping_handler.cpp  go_to_target_with_avoidance_handler.cpp  navigate_to_waypoint_handler.cpp  search_handler.cpp  survey_handler.cpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/src/mission_planning/: geometry_utils.cpp  waypoint_generator.cpp
airstack/ros_ws/src/rtsp_streamer/: setup.py
airstack/ros_ws/src/vision_gps_estimator/: package.xml  setup.py
airstack/scripts/: view_flight_logs.sh
old/AirStack/docs/: getting_started.md
old/AirStack/docs/development/: docker_usage.md
old/AirStack/robot/docker/: .bashrc
old/AirStack_GCS/docs/development/: docker_usage.md
old/humanflow/ros2_ghadron_gimbal/: README.md
operator/behavior-tree-controller/src/: BehaviorTreeControllerPanel.tsx
operator/geofence-human-visualizer/: package-lock.json  unknown.geofence-human-visualizer-0.1.0.foxe
operator/geofence-human-visualizer/src/: GeofenceHumanPanel.tsx
operator/gimbal-foxglove-controller/: unknown.gimbal-foxglove-controller-0.0.0.foxe
operator/gimbal-foxglove-controller-backup-1115/: README.md
operator/gimbal-foxglove-controller/src/: GimbalCapturePanel.tsx  index.ts
operator/path-solver-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
operator/path-solver-extension/src/: PathSolverPanel.tsx  index.ts
scripts/: FVD.sh  contribution_analysis.sh
uav_to_ugv/clean_workspace/archived_bags/burst_20250927_002503/: burst_20250927_002503_0.db3
uav_to_ugv/clean_workspace/archived_bags/burst_20250927_002545/: burst_20250927_002545_0.db3
uav_to_ugv/clean_workspace/archived_bags/burst_20250927_003112/: burst_20250927_003112_0.db3
uav_to_ugv/clean_workspace/archived_bags/burst_20250927_003736/: burst_20250927_003736_0.db3
uav_to_ugv/clean_workspace/mcap_receiver/: USER_MANUAL.md
uav_to_ugv/clean_workspace/received_bags/: .pipeline_status.json
vlm_geolocator/: CASUALTY_EMAIL_NOTIFIER_README.md  DEBUG_DISPLAY_GUIDE.md  DEBUG_IMAGE_VIEWING_GUIDE.md  GEMINI_VIDEO_ANALYZER_README.md  GNSS_TOOLS_USAGE.md  GPS_COMPARISON_README.md  HTML_VIEWER_IMPROVEMENTS.md  OPENCV_DISPLAY_DIAGNOSIS.md  QUICK_DEBUG_VIEW.md  analyze_video.py  create_fixed_video.py  find_closest_waypoint.py  gemini_result_viewer_html.py  gnss_distance.py  install_gemini_analyzer.sh  test_email_notifier.sh  test_gemini_analyzer.py  test_image_display.py  test_opencv_threading.py  test_trigger_record.sh  test_waypoints.yaml  verify_gimbal_config.py
vlm_geolocator/config/: camera_config.yaml  email_config.yaml  gps_config.yaml  ros_config.yaml  system_config.yaml
vlm_geolocator/docs/: CASUALTY_GEOLOCATED_TOPIC.md
vlm_geolocator/src/: casualty_email_notifier.py  gps_domain_bridge_refactored.py  video_merger_node.py  vision_inference_node_refactored.py
(+43 files in other folders)
